fixat 'cart' position, fixat z-index på 'cart' så den visas under 'information Div' när man läser mer på en vara

--- a/vite-grupparbete/src/style.scss
+++ b/vite-grupparbete/src/style.scss
@@ -87,7 +87,7 @@ header {
         padding: 5px 1.5rem;
         width: 15rem;
         top: 75px;
-        z-index: 10;
+        z-index: 1;
         background-color: white;
         border: 1px solid black;
         border-top: none;
